# cobalt-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build_docs.sh  build_editor.sh  build_example.sh  build_tests.sh  clean.sh  cobalt-config.json  format.sh  merge_from.sh  run_tests.sh  setup.sh
.github/workflows/: c-cpp.yml
cobalt/core/: core.h  exception.h  pch.h
cobalt/core/containers/: buffer.h  linked_list.h  queue.h  stack.h  types.h  vector.h
cobalt/core/ecs/: exception.h  properties.h  world.cpp  world.h
cobalt/core/ecs/component/: component.cpp  component.h  registry.cpp  registry.h  storage.cpp  storage.h
cobalt/core/ecs/entity/: entity.cpp  entity.h  registry.cpp  registry.h
cobalt/core/exceptions/: container_exception.h  ecs_exception.h  gfx_exception.h  gl_exception.h  input_exception.h
cobalt/core/geom/: aabb.cpp  aabb.h  axis.h  bvh.h  dbvh.h  octree.h
cobalt/core/gfx/: batch_mesh.cpp  batch_mesh.h  batch_renderer.cpp  batch_renderer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  color.h  exception.h  filter_node.cpp  filter_node.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  pipeline.cpp  pipeline.h  render_context.cpp  render_context.h  render_graph.cpp  render_graph.h  render_node.cpp  render_node.h  render_stage.cpp  render_stage.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  scene_node.cpp  scene_node.h  skybox.cpp  skybox.h  window.cpp  window.h
cobalt/core/gl/: compute_shader.cpp  compute_shader.h  context.cpp  context.h  definitions.h  exception.h  fbo.cpp  fbo.h  gl.h  ibo.cpp  ibo.h  render_shader.cpp  render_shader.h  shader.cpp  shader.h  texture.cpp  texture.h  ubo.cpp  ubo.h  vao.cpp  vao.h  vbo.cpp  vbo.h
cobalt/core/input/: exception.h  input_command.h  input_manager.cpp  input_manager.h  keyboard.cpp  keyboard.h  keycodes.cpp  keycodes.h  mouse.cpp  mouse.h  null.cpp  null.h  peripheral.h
cobalt/core/io/: file.cpp  file.h  path.cpp  path.h
cobalt/core/memory/: allocator.h  arena.cpp  arena.h  heap.cpp  heap.h  pool.h
cobalt/core/scene/: scene.cpp  scene.h
cobalt/core/types/: linked_list.h  stack.h  types.h
cobalt/core/utils/: color.cpp  color.h  exception.h  log.cpp  log.h  platform.h  types.h
cobalt/editor/: editor.cpp  editor.h
cobalt/editor/input/: bindings.h
cobalt/editor/persistency/: cobalt_configuration.cpp  cobalt_configuration.h  configuration.cpp  configuration.h
cobalt/engine/: application.cpp  application.h  cobalt.h  entry_point.cpp  entry_point.h
cobalt/engine/bundle/: base.h
cobalt/engine/camera/: camera.cpp  camera.h  controller.cpp  controller.h  manager.cpp  manager.h  plugin.cpp  plugin.h
cobalt/engine/euler/: euler.cpp  euler.h  plugin.cpp  plugin.h
cobalt/engine/gfx/: default_graph.cpp  default_graph.h  filter_node.cpp  filter_node.h  scene_node.cpp  scene_node.h
cobalt/engine/input/: exception.h  input_command.h  input_manager.cpp  input_manager.h  null.cpp  null.h  peripheral.h  plugin.cpp  plugin.h
cobalt/engine/internal/: configuration.cpp  configuration.h  internal_exception.h  material_library.cpp  material_library.h  shader_library.cpp  shader_library.h  texture_library.cpp  texture_library.h
cobalt/engine/keyboard/: keyboard.cpp  keyboard.h  plugin.cpp  plugin.h
cobalt/engine/lighting/: plugin.cpp  plugin.h  point_light.cpp  point_light.h
cobalt/engine/material/: library.cpp  library.h  material.cpp  material.h  material_library.cpp  material_library.h  plugin.cpp  plugin.h  shader_library.cpp  shader_library.h  texture_library.cpp  texture_library.h
cobalt/engine/material_pbr/: library.cpp  library.h  material.cpp  material.h  plugin.cpp  plugin.h
cobalt/engine/materialpbr/: material.cpp  material.h  plugin.cpp  plugin.h
cobalt/engine/mesh3d/: mesh.cpp  mesh.h  plugin.cpp  plugin.h
cobalt/engine/mouse/: mouse.cpp  mouse.h  plugin.cpp  plugin.h
cobalt/engine/raster3d/: mesh.cpp  mesh.h  plugin.cpp  plugin.h  renderer.cpp  renderer.h  skybox.cpp
cobalt/engine/render/: graph.cpp  graph.h  node.cpp  node.h  plugin.cpp  plugin.h  renderer.cpp  renderer.h  target.cpp  target.h
cobalt/engine/renderer3d/: mesh.cpp  mesh.h  plugin.cpp  plugin.h  renderer.cpp  renderer.h  skybox.cpp  skybox.h
cobalt/engine/scene/: graph.cpp  graph.h  plugin.cpp  plugin.h  scene.cpp  scene.h
cobalt/engine/time/: plugin.cpp  plugin.h  time.cpp  time.h
cobalt/engine/window/: plugin.cpp  plugin.h  window.cpp  window.h
doxygen/: Doxyfile  Makefile  compile_commands.json  doxy-boot.js
example/: CMakeLists.txt
example/assets/: config.json
example/assets/shaders/: compute.comp  exampleShader.vert  shaders.json
example/assets/textures/: textures.json
example/src/: game.cpp
include/freetype/: ft2build.h
include/stb_image/: stb_image.h
lib/: unity.c  unity.h  unity_internals.h
lib/glfw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/examples/: Makefile  cmake_install.cmake  offscreen
lib/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
lib/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  msaa  triangle-vulkan
src/core/memory/: heap.cpp  heap.h  pool.h
src/core/type/: types.h
src/engine/: application.cpp  application.h  entry_point.h
test/: test_arena.cpp  test_pool.cpp
tests/: CMakeLists.txt
tests/core/containers/: test_linked_list.cpp  test_queue.cpp  test_stack.cpp  test_vector.cpp
tests/core/ecs/: test_component.cpp  test_entity.cpp  test_query.cpp  test_resource.cpp  test_schedule.cpp  test_world.cpp
tests/core/geom/: test_aabb.cpp  test_bvh.cpp  test_dbvh.cpp  test_octree.cpp
tests/core/input/: test_keyboard.cpp
tests/core/io/: test_path.cpp
tests/core/memory/: test_arena.cpp  test_pool.cpp
tests/core/types/: test_linked_list.cpp  test_stack.cpp
tests/lib/glfw/: Makefile
tests/lib/glfw/docs/: Doxyfile  Makefile
tests/lib/glfw/examples/: Makefile
tests/lib/glfw/src/: Makefile
tests/lib/glfw/tests/: events  glfwinfo  iconify  monitors  reopen
(+80 files in other folders)
